# Sudoku-Solver

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/sudoku_solver/: __init__.py  __main__.py  board.py  generator.py  main.py  renderer.py  solver.py
src/sudoku_solver/config/: constants.py  settings.py
tests/: test_board.py  test_generator.py  test_solver.py
